--- a/backend/Jimx.WebAggregator.Parser.Html/Jimx.WebAggregator.Parser.Html.csproj
+++ b/backend/Jimx.WebAggregator.Parser.Html/Jimx.WebAggregator.Parser.Html.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jimx.Common\Jimx.Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Parsing\" />
+    <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
   </ItemGroup>
 
 </Project>
