--- a/backend/Jimx.WebAggregator.Domain.CityCosts/Jimx.WebAggregator.Domain.CityCosts.csproj
+++ b/backend/Jimx.WebAggregator.Domain.CityCosts/Jimx.WebAggregator.Domain.CityCosts.csproj
@@ -7,11 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+    <PackageReference Include="MongoDB.Bson" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jimx.Common\Jimx.Common.csproj" />
     <ProjectReference Include="..\Jimx.WebAggregator.Domain.MongoDB\Jimx.WebAggregator.Domain.MongoDB.csproj" />
   </ItemGroup>
 
