web api with connection to persistent storage

--- a/backend/Jimx.WebAggregator.API/appsettings.json
+++ b/backend/Jimx.WebAggregator.API/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "CitiesDatabase": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "demographics",
+        "CitiesCollectionName": "city-costs",
+        "CityDictionaryItemsCollectionName": "city-cost-dictionary"
+    },
+    "General": {
+        "Auth": {
+            "Issuer": "WebAggregator.API",
+            "CredentialsSigningKey": "hr*V?e{jHZ8f>+dN5n)TXLZdR;f[2]U(D/a3yA&kLKrY"
+        },
+        "BaseUrl": "",
+        "FrontendUrl": ""
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
