--- a/backend/Jimx.WebAggregator.ParserTest/Jimx.WebAggregator.ParserTest.csproj
+++ b/backend/Jimx.WebAggregator.ParserTest/Jimx.WebAggregator.ParserTest.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Jimx.WebAggregator.Builder.MongoDB\Jimx.WebAggregator.Builder.MongoDB.csproj" />
+    <ProjectReference Include="..\Jimx.WebAggregator.Domain.CityCosts\Jimx.WebAggregator.Domain.CityCosts.csproj" />
     <ProjectReference Include="..\Jimx.WebAggregator.Parser.Html\Jimx.WebAggregator.Parser.Html.csproj" />
     <ProjectReference Include="..\Jimx.WebAggregator.Parser\Jimx.WebAggregator.Parser.csproj" />
     <ProjectReference Include="..\Jimx.WebAggregator.Persistent.MongoDB\Jimx.WebAggregator.Persistent.MongoDB.csproj" />
