backend for average salary and tax levels

--- a/backend/Jimx.WebAggregator.API/appsettings.json
+++ b/backend/Jimx.WebAggregator.API/appsettings.json
@@ -3,7 +3,9 @@
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "demographics",
         "CitiesCollectionName": "city-costs",
-        "CityDictionaryItemsCollectionName": "city-cost-dictionary"
+        "CityDictionaryItemsCollectionName": "city-cost-dictionary",
+        "RegionTaxesCollectionName": "region-taxes",
+        "CitySalariesCollectionName": "city-salaries"
     },
     "General": {
         "Auth": {
