--- a/backend/Jimx.WebAggregator.Persistent.MongoDB/Jimx.WebAggregator.Persistent.MongoDB.csproj
+++ b/backend/Jimx.WebAggregator.Persistent.MongoDB/Jimx.WebAggregator.Persistent.MongoDB.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>13</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jimx.Common.Helpers" Version="1.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jimx.Common\Jimx.Common.csproj" />
     <ProjectReference Include="..\Jimx.WebAggregator.Domain.MongoDB\Jimx.WebAggregator.Domain.MongoDB.csproj" />
   </ItemGroup>
 
