minor changes to fix term calculation

--- a/backend/Jimx.WebAggregator.API/appsettings.json
+++ b/backend/Jimx.WebAggregator.API/appsettings.json
@@ -5,6 +5,7 @@
         "CitiesCollectionName": "city-costs",
         "CityDictionaryItemsCollectionName": "city-cost-dictionary",
         "RegionTaxesCollectionName": "region-taxes",
+        "RegionTaxDeductionsCollectionName": "region-tax-deductions",
         "CitySalariesCollectionName": "city-salaries"
     },
     "General": {
