--- a/backend/Jimx.WebAggregator.API/Dockerfile
+++ b/backend/Jimx.WebAggregator.API/Dockerfile
@@ -1,20 +1,25 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER app
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
+COPY ./nuget.config ./
+COPY ["Jimx.WebAggregator.Calculations/Jimx.WebAggregator.Calculations.csproj", "Jimx.WebAggregator.Calculations/"]
+COPY ["Jimx.WebAggregator.Domain.CityCosts/Jimx.WebAggregator.Domain.CityCosts.csproj", "Jimx.WebAggregator.Domain.CityCosts/"]
+COPY ["Jimx.WebAggregator.Domain.MongoDB/Jimx.WebAggregator.Domain.MongoDB.csproj", "Jimx.WebAggregator.Domain.MongoDB/"]
+COPY ["Jimx.WebAggregator.Parser/Jimx.WebAggregator.Parser.csproj", "Jimx.WebAggregator.Parser/"]
+COPY ["Jimx.WebAggregator.Parser.Html/Jimx.WebAggregator.Parser.Html.csproj", "Jimx.WebAggregator.Parser.Html/"]
+COPY ["Jimx.WebAggregator.Persistent.MongoDB/Jimx.WebAggregator.Persistent.MongoDB.csproj", "Jimx.WebAggregator.Persistent.MongoDB/"]
 COPY ["Jimx.WebAggregator.API/Jimx.WebAggregator.API.csproj", "Jimx.WebAggregator.API/"]
 RUN dotnet restore "./Jimx.WebAggregator.API/Jimx.WebAggregator.API.csproj"
 COPY . .
 WORKDIR "/src/Jimx.WebAggregator.API"
-RUN dotnet build "./Jimx.WebAggregator.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Jimx.WebAggregator.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Jimx.WebAggregator.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Jimx.WebAggregator.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
