--- a/backend/Jimx.WebAggregator.API/Jimx.WebAggregator.API.csproj
+++ b/backend/Jimx.WebAggregator.API/Jimx.WebAggregator.API.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
     <PackageReference Include="Jimx.Common.WebApi.Models" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
